@@ -1,3 +1,7 @@
+r38 (06. 12. 2021):
+C4 trackers now also work on client
+Fixed a client crash when a heist used PEOC computer
+
 r37 (26. 11. 2021):
 Fixed a client crash when a heist used attack helicopter from Ukrainian Prisoner Heist
 
